--- a/org.inaetics.ails.android/app/src/main/res/values/strings.xml
+++ b/org.inaetics.ails.android/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">AILS</string>
+    <string name="title_activity_register">Register</string>
+
+    <string name="server_unavailable">Connection failed. Please check your internet connection</string>
+
+    <string name="prompt_name">Name</string>
+    <string name="action_register">Register</string>
+    <string name="error_field_required">This field is required</string>
+
+    <string name="register_title">Welcome new user</string>
+    <string name="register_introduction">This app can help you locate your fellow colleagues.
+        Please register your device, to start using it.</string>
 </resources>
